2008-12-27
- Added "-fPIC" to the Makefiles

2009-03-11
- Added missing include in PThread++.h to fix compiler issue with g++-3.3

2010-02-16
- modified logging to handle full path filenames cause by cmake in __FILE__.
  Provided new logging macros DBG, INF, ERR